# OpenStream

./: .gitignore  .gitmodules  Makefile  Makefile.config  README.md
examples/: Makefile  Makefile.config  benchmark-examples.sh  bitstreams  run.config  run.sh  tune.sh
examples/bitonic/: Makefile  bitonic.c  bitonic.h  stream_bitonic_from_df.c  stream_bitonic_seqctrl.c  stream_df_bitonic.c  stream_df_bitonic_reuse.c
examples/bzip2/: Makefile  README.md  bzip2.c  common.h  compress.c  input.txt  run.sh  spec.c  spec.h  stream_bzip2.c  stream_spec.c
examples/cg_task_hydro/: Makefile  SplitSurface.c  cmpflx.c  compute_deltat.c  conservar.c  constoprim.c  equation_of_state.c  hydro_funcs.c  hydro_funcs.h  hydro_godunov.c  main.c  make_boundary.c  makedeps  pack_boundary.h  parametres.c  parametres.h  qleftright.c  riemann.c  slope.c  small_set.nml  trace.c  utils.c  vtkfile.c
examples/cholesky/: Makefile  block_seq_cholesky.c  cholesky.c  cholesky_common.h  cilk_cholesky.cilk  mkl_par_cholesky.c  openmp_loop_cholesky.c  openmp_loop_cholesky_interleaved.c  openmp_task_cholesky.c  openmp_task_cholesky_interleaved.c  plasma_cholesky.c  stream_cholesky.c  stream_cholesky_from_df.c  stream_df_cholesky.c  stream_df_cholesky_FPGA.c  stream_df_cholesky_hyb.c  stream_df_cholesky_hyb_reuse.c  stream_df_cholesky_peek.c  stream_df_cholesky_peek_reuse.c  stream_df_cholesky_reuse.c  (+1 more)
extras/: Makefile.getdeps  Makefile.mem_level_names  Makefile.papi_enabled  cilk.patch  gen-trace-histogram-sheet.sh  gen-wqueue-heatmap.sh  mem_level_names.c  openstream.pcf  osparaver.in  papi_enabled.c  paraver.patch  setup-fos.sh  wqueue_heatmap.gnuplot  wqueue_singlestat.gnuplot  wqueue_timestat.gnuplot
extras/fos-cmake/bit_patch/: CMakeLists.txt
extras/fos-cmake/cynq/: CMakeLists.txt
extras/fos-cmake/udmalib/: CMakeLists.txt
libworkstream_df/: LICENSE  Makefile  alloc.h  ansi_extras.h  arch.h  atomic-defs-c11.h  benchmark-cdeque.sh  broadcast.h  cbuffer-c11.h  cbuffer-native.h  cbuffer.h  cdeque-c11.c.h  cdeque-c11.h  cdeque-native.c.h  cdeque-native.h  cdeque.c  cdeque.h  config-check.h  config.h  convert.c  convert.h  error.c  error.h  fibers.c  fibers.h  fos-manager.c  fos-manager.cpp  fos-manager.h  fpga-support.c  fpga-support.c.h  fpga-support.h  glib_extras.h  hwloc-support.c  hwloc-support.h  interleave.c  interleave.h  list.h  mpidebug.h  mpsc_fifo.h  node_proc_comm.c  (+31 more)
tests/: check.sh  timeout.sh
(+261 files in other folders)
